refactoring the responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="header-section">
                 <div class="header-section__box">
                     <div class="header-box__title">
-                        <h1>Deluuxe Location</h1>
+                        <h1>Deluuxe Rental</h1>
                     </div>
                     <div class="header-box__sub-title">
                         <h1>We offer the best prices</h1>
@@ -111,24 +111,24 @@
         </div>
     </section>
     
-    <section class="reservation-section" id="reserve-sec">
+    <section class="reservation-section height50" id="reserve-sec">
         <div class="structure">
             <div class="reservation-boxes-container">             
                     <div class="container__form-deals">
                         <div class="deals__create-booking">
                             <div class="create-booking__title">
-                                <h1>Réservez maintenant</h1>
+                                <h1>Book now</h1>
                             </div>
                             <div class="create-booking__subtitle">
-                                <h3>Les meilleures réductions cette semaine</h3>
+                                <h3>Best discounts this week</h3>
                             </div>
                             <div class="create-booking__link">
-                                <a href="{{base}}/booking/create" class="header-box_btn deals-link">Réservez</a>
+                                <a href="{{base}}/booking/create" class="btn btn-no-bg">Réservez</a>
                             </div>
                         </div>
                         <div class="deals-box">
                             <h1 class="deals-title">
-                                OBTENEZ 15% DE RABAIS SUR VOTRE LOCATION
+                                GET 15% OFF YOUR RENTAL
                             </h1>
                             <div class="deals-img">
                                 <img src="assets/img/gallery/mercedes.jpg" alt="mercedes-img">                                   
@@ -165,6 +165,7 @@
             </div>
         </div>
     </section>
+
     <section class="location-section">
         <div class="structure">
             <div class="location-container">
