--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="header-section">
                 <div class="header-section__box">
                     <div class="header-box__title">
-                        <h1>Deluxe Rental</h1>
+                        <h1>Autoventa</h1>
                     </div>
                     <div class="header-box__sub-title">
                         <h1>We offer the best prices</h1>
