--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <div class="structure">
             <div class="wrapper">
                 <i id="left" class="fa-solid fas fa-angle-left"></i>
-                <div class="carousel">
+                <div class="carousel block">
                     <div class="card-product">
                         <div class="product_card--img">
                             <img src="/cardeluxe/assets/image-sarah-DB37_5UK.png" alt="news_1" draggable="false">
@@ -471,7 +471,7 @@
         <div class="structure">
             <h2>How To Find Us</h2>
             <div class="find-us-container">
-                <div class="map-box">
+                <div class="map-box block">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24117.41628755593!2d-0.11954335!3d51.50332435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b33f112f109%3A0x57b99d92aa99d92f!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2suk!4v1634146079449!5m2!1sen!2suk"
                         width="100%"
                         style="border:0;"
@@ -479,7 +479,7 @@
                         loading="lazy">
                     </iframe>
                 </div>
-                <div class="address-box">
+                <div class="address-box block">
                     <h3>Our Address</h3>
                     <p>The United Kingdom —</p>
                     <p>329 Queensberry Street,</p>
