--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
     <section class="brands-section flex-center height30 ">
         <div class="structure">
-            <div class="brand-header">
+            <div class="brand-header block">
                 <h2>Explore Our Premium Brands</h2>
                 <a href="#" class="show-all-brands">Show All Brands &rarr;</a>
             </div>
@@ -221,7 +221,7 @@
 
     <section class="search-car-section flex-center">
         <div class="structure flex-col gap30">
-            <div class="search-car-header flex-column-center gap20">
+            <div class="search-car-header flex-column-center gap20 block">
                 <small>Our collection</small>
                 <h3>Find Your Dream Car Today</h3>
             </div>
@@ -311,7 +311,7 @@
 
     <section class="browse-by-type flex-center">
         <div class="structure">
-            <div class="browse-title">
+            <div class="browse-title block">
                 <h2>Browse By Type</h2>
                 <a href="#" class="view-all">View All &rarr;</a>
             </div>
