--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
     <section class="brands-section flex-center height30 ">
         <div class="structure">
-            <div class="brand-header">
+            <div class="brand-header block">
                 <h2>Explore Our Premium Brands</h2>
                 <a href="#" class="show-all-brands">Show All Brands &rarr;</a>
             </div>
@@ -221,7 +221,7 @@
 
     <section class="search-car-section flex-center">
         <div class="structure flex-col gap30">
-            <div class="search-car-header flex-column-center gap20">
+            <div class="search-car-header flex-column-center gap20 block">
                 <small>Our collection</small>
                 <h3>Find Your Dream Car Today</h3>
             </div>
@@ -311,7 +311,7 @@
 
     <section class="browse-by-type flex-center">
         <div class="structure">
-            <div class="browse-title">
+            <div class="browse-title block">
                 <h2>Browse By Type</h2>
                 <a href="#" class="view-all">View All &rarr;</a>
             </div>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="type-item block">
                     <img src="assets/img/gallery/collection/types/sedan.jpg" alt="Sedan">
-                    <div class="type-label block">
+                    <div class="type-label">
                         <i class="fa fa-car"></i> Sedan
                     </div>
                 </div>
@@ -355,7 +355,7 @@
         <div class="structure">
             <div class="wrapper">
                 <i id="left" class="fa-solid fas fa-angle-left"></i>
-                <div class="carousel">
+                <div class="carousel block">
                     <div class="card-product">
                         <div class="product_card--img">
                             <img src="assets/img/personages/image-sarah.png" alt="news_1" draggable="false">
@@ -471,7 +471,7 @@
         <div class="structure">
             <h2>How To Find Us</h2>
             <div class="find-us-container">
-                <div class="map-box">
+                <div class="map-box block">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24117.41628755593!2d-0.11954335!3d51.50332435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b33f112f109%3A0x57b99d92aa99d92f!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2suk!4v1634146079449!5m2!1sen!2suk"
                         width="100%"
                         style="border:0;"
@@ -479,7 +479,7 @@
                         loading="lazy">
                     </iframe>
                 </div>
-                <div class="address-box">
+                <div class="address-box block">
                     <h3>Our Address</h3>
                     <p>The United Kingdom —</p>
                     <p>329 Queensberry Street,</p>
