--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <nav>
 
         <div class="logo">
-            <div class="logo-img"><img src="assets/img/nav/autoventa3.png" alt="logo-deluxe-car"></div>
+            <a href="/">
+                <div class="logo-img"><img src="assets/img/nav/autoventa3.png" alt="logo-deluxe-car"></div>
+            </a>
         </div>
         <div class="page-links">
             <a class="nav-btn" href="">About</a>
-            <a class="nav-btn" href="">Catalog</a>
+            <a class="nav-btn" href="/catalog.html">Catalog</a>
             <a class="nav-btn" href="">Team</a>
             <a class="nav-btn" href="">Blog</a>
         </div>
