--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="page-links">
             <a class="nav-btn" href="">About</a>
-            <a class="nav-btn" href="/cardeluxe/catalog.html">Caatalog</a>
+            <a class="nav-btn" href="/cardeluxe/catalog.html">Catalog</a>
             <a class="nav-btn" href="">Team</a>
             <a class="nav-btn" href="">Blog</a>
         </div>
