adding the project ready for deployment

--- a/public/catalog.html
+++ b/public/catalog.html
@@ -18,15 +18,16 @@
             </a>
         </div>
         <div class="page-links">
-            <a class="nav-btn" href="index.html">About</a>
-            <a class="nav-btn" href="/catalog.html">Catalog</a>
-            <a class="nav-btn" href="index.html">Team</a>
-            <a class="nav-btn" href="index.html">Blog</a>
+            <a class="nav-btn" href="">About</a>
+            <a class="nav-btn active-link" href="/catalog.html">Catalog</a>
+            <a class="nav-btn" href="">Team</a>
+            <a class="nav-btn" href="">Blog</a>
         </div>
         <div class="contact-us">
-            <div class="greet-user">
+            <!-- <div class="greet-user">
                 <p class="greet-user-text">Hello, <span>Mihail</span></p>
-            </div>
+            </div> -->
+            <a href="#" class="btn">Contact Us</a>
         </div>
 
         <div class="hamburger">
@@ -36,10 +37,10 @@
         </div>
 
         <div class="dropdown_menu">
-            <li><a href="index.html" role="menuitem">About</a></li>
-            <li><a href="catalog.html" role="menuitem">Catalog</a></li>
-            <li><a href="index.html" role="menuitem">Team</a></li>
-            <li><a href="index.html" role="menuitem">Blog</a></li>
+            <li><a href="#" role="menuitem">About</a></li>
+            <li><a href="#" role="menuitem">Catalog</a></li>
+            <li><a href="#" role="menuitem">Team</a></li>
+            <li><a href="#" role="menuitem">Blog</a></li>
             <div class="dropdown_menu--connection">
                 <a class="btn" href="/logout">Authentification</a>
             </div>
@@ -50,9 +51,6 @@
         <img src="assets/img/gallery/collection.jpg" alt="our collection">
         <div class="header-overlay typewriter">
             <h1>Discover Our collection</h1>
-            <nav class="breadcrumb">
-                <a href="#">Home</a> | <span>Cars Listing v1</span>
-            </nav>
         </div>
     </header>
     
@@ -737,11 +735,11 @@
                         Newsletter
                     </div>
                     <h3 class="mb-10">
-                        Subscribe Our Newsletter To Get Latest Update And News
+                        Subscribe to Our Newsletter To Get the Latest Update And News
                     </h3>
                     <div class="footer--newsletter">
                         <input type="text" class="newsletter-input" placeholder="youremail@example.com">
-                        <button class="newsletter-btn" type="submit">
+                        <button class="btn newsletter-btn" type="submit">
                             Subscribe Now <i class="far fa-paper-plane"></i>
                         </button>
                     </div>
